[tool.poetry]
name = "metrics-demo"
version = "0.1.0"
description = ""
authors = ["Amanda Walker <amanda@amandawalker.io>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit-nightly = "^1.1.1-alpha.20211104"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
